<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_order"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/all_orders"
            style="@style/more_style"
            android:text="@string/look_all"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_3"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:id="@+id/orders_no_payment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/order_pay"
            android:gravity="center"
            android:text="@string/not_pay"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/orders_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/order_cancel"
            android:gravity="center"
            android:text="@string/canceled"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/orders_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/order_finish"
            android:gravity="center"
            android:text="@string/is_done"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/orders_pending"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/order_apply"
            android:gravity="center"
            android:text="@string/apply_to_refund"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/orders_refunded"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/order_refund"
            android:gravity="center"
            android:text="@string/refund_done"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
</LinearLayout>