<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/default_background"
    android:orientation="vertical"
    tools:context=".home.mvp.ui.login.activity.FeedBackFragment">

    <include layout="@layout/include_fragment_common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qa_info"
            android:textColor="@color/color_3"
            android:textSize="@dimen/sp_16" />


        <LinearLayout
            android:id="@+id/question_input"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_border_white"
                android:gravity="top"
                android:hint="@string/qa_info_hint"
                android:maxLength="60"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/color_c5"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/contact_infomation"
                android:textColor="@color/color_3"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/shape_border_white"
                android:gravity="start"
                android:hint="@string/contact_infomation_hint"
                android:inputType="number"
                android:padding="@dimen/dp_8"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>